force-app/main/default/objects/Lead/fields/Applicator_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Applicator_Contact_Number__c</fullName>
    <label>Applicator Contact Number</label>
    <type>Phone</type>
</CustomField>