force-app/main/default/objects/Lead/fields/Applicator_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicator_Name__c</fullName>
    <label>Applicator Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>