force-app/main/default/objects/Lead/fields/Architect_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Architect_Contact_Number__c</fullName>
    <label>Architect Contact Number</label>
    <type>Phone</type>
</CustomField>