force-app/main/default/objects/Lead/fields/Architect_Firm__c.field-meta.xml
<CustomField>
    <fullName>Architect_Firm__c</fullName>
    <label>Architect Firm</label>
    <length>100</length>
    <type>Text</type>
</CustomField>