force-app/main/default/objects/Lead/fields/Architect_Name__c.field-meta.xml
<CustomField>
    <fullName>Architect_Name__c</fullName>
    <label>Architect Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>