force-app/main/default/objects/Lead/fields/Concerned_Person__c.field-meta.xml
<CustomField>
    <fullName>Concerned_Person__c</fullName>
    <label>Concerned Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>