force-app/main/default/objects/Lead/fields/Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Order_Value__c</fullName>
    <label>Order Value</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>