force-app/main/default/objects/Lead/fields/Target_Site_Stage__c.field-meta.xml
<CustomField>
    <fullName>Target_Site_Stage__c</fullName>
    <label>Target Site Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Polish</fullName>
            </value>
            <value>
                <fullName>Protection &amp; Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>